opam-version: "2.0"
authors: "John Else"
homepage: "https://github.com/johnelse/ocaml-webaudio"
bug-reports: "https://github.com/johnelse/ocaml-webaudio/issues"
dev-repo: "git://github.com/johnelse/ocaml-webaudio"
maintainer: "john.else@gmail.com"
synopsis: "Bindings to the Web Audio API, for use with js_of_ocaml"
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" ] {with-test}
]
depends: [
  "dune" {>= "1.1"}
  "ocaml" {>= "4.02.1"}
  "js_of_ocaml"
  "webtest-js" {with-test}
]
